# brick-libcpp

./: .gitignore  LICENSE  README.md  _CoqProject  mutexes.tex
.devcontainer/: devcontainer.json
papers/rocqpl-26/: Makefile  bibfile.bib  iris.sty  mutexes.tex  stdcpp.tex
rocq-brick-libcpp/proof/: dune  dune-gen.sh  dune.inc
rocq-brick-libcpp/proof/mutex/: spec.v  test.cpp  test_cpp_proof.v
rocq-brick-libcpp/proof/newarr/: hints.v  spec_exc.v  test.cpp  test.v
rocq-brick-libcpp/proof/semaphore/: inc.hpp  spec.v  test.cpp
rocq-brick-libcpp/proof/shared_ptr/: specs.v  test.cpp  test.v  uglyprint.v
rocq-brick-libstdcpp/: Makefile  dune  dune-project  rocq-brick-libstdcpp.opam
rocq-brick-libstdcpp/proof/: cpp2v-dune-gen.sh  dune  dune-gen.sh  dune.inc
rocq-brick-libstdcpp/proof/memory/shared_ptr/: README.md
rocq-brick-libstdcpp/proof/mutex/: demo.cpp  demo_cpp_proof.v  spec.v  test_cpp_proof.v
rocq-brick-libstdcpp/proof/new/: hints.v  pred.v  spec.v  spec_exc.v
rocq-brick-libstdcpp/proof/runtime/: pred.v
rocq-brick-libstdcpp/proof/semaphore/: spec.v  test_cpp_proof.v
rocq-brick-libstdcpp/proof/semaphore/proof/: release.v
rocq-brick-libstdcpp/test/: cpp2v-dune-gen.sh  dune  dune.inc
rocq-brick-libstdcpp/test/new/: demo.cpp  demo_cpp_proof.v
