(lang dune 3.17)
(using coq 0.10)
(name rocq-brick-libcpp)

(generate_opam_files)

(license BSD-3)

(maintainers
 "Paolo Giarrusso <paolo@bluerock.io>"
 "Gregory Malecha <gregory@bluerock.io>")
(authors
 "Gregory Malecha <gregory@bluerock.io>"
 "Paolo Giarrusso <paolo@bluerock.io>"
)

(source (github bluerock-io/brick-libcpp))

(package
 (name rocq-brick-libcpp)
 (synopsis "BlueRock BRiCk: C++ standard library")
 (depends
  (rocq-bluerock-cpp2v (= dev))
  elpi-cpp
  coq-bluerock-auto-core
  coq-bluerock-auto-cpp))

(subst disabled)
