; Copyright © 2022-2025 BlueRock Security, Inc.
;
; This file is CONFIDENTIAL AND PROPRIETARY to BlueRock. All rights reserved.
;
; Use of this file is only permitted subject to a separate written license agreement with BlueRock.

(include_subdirs qualified)
(coq.theory
 (name bluerock.brick.libstdcpp) ; logical path of this library
 (package rocq-brick-libstdcpp)
 (theories
  ; bluerock deps
  Stdlib
  stdpp
  bluerock.upoly
  elpi elpi_elpi elpi.apps.locker elpi.apps.NES
  Lens Lens.Elpi
  Ltac2 bluerock.ltac2.extra
  bluerock.prelude
  iris
  bluerock.iris.extra
  Equations Equations.Prop Equations.Type
  bluerock.lang.cpp
  bluerock.ltac2.logger
  bluerock.auto.core
  ;
  ExtLib
  bluerock.elpi.extra
  bluerock.elpi.cpp
  ; bluerock deps end
  bluerock))
(include dune.inc)
