; Copyright © 2022-2025 BlueRock Security, Inc.
;
; This file is CONFIDENTIAL AND PROPRIETARY to BlueRock. All rights reserved.
;
; Use of this file is only permitted subject to a separate written license agreement with BlueRock.

(include_subdirs qualified)
(coq.theory
 (name bluerock.brick.libstdcpp.test) ; logical path of this library
 (theories
  ; bluerock.brick.libstdcpp deps
  Stdlib
  stdpp
  bluerock.upoly
  elpi elpi_elpi elpi.apps.locker elpi.apps.NES
  Lens Lens.Elpi
  Ltac2 bluerock.ltac2.extra
  bluerock.prelude
  iris
  bluerock.iris.extra
  Equations Equations.Prop Equations.Type
  bluerock.lang.cpp
  bluerock.ltac2.logger
  bluerock.auto.core
  ;
  ExtLib
  bluerock.elpi.extra
  bluerock.elpi.cpp
  bluerock
  ; bluerock.brick.libstdcpp deps end
  bluerock.brick.libstdcpp))
(include dune.inc)
